[package]
name = "robot-masters"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "robot_masters"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
bytemuck = { version = "1.13", features = ["derive"] }
rmengine = { git = "ssh://git@github.com/val-samonte/rmengine.git", branch = "remove-ecs", package = "rmengine", default-features = false }
