[package]
name = "create_game"
version = "0.2.3"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "create_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
game_state = { version = "0.2.3", path = "../../components/game_state", features = ["cpi"] }
rmengine = { git = "ssh://git@github.com/val-samonte/rmengine.git", branch = "remove-ecs", package = "rmengine", default-features = false }